--- a/index.html
+++ b/index.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
-<<html>
+<html>
 <head>
 	<title>GooGle ME</title>
+	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<div class="navbar">
+		<ul>
+			<li><a href="#">Jeremy</a></li>
+			<li><a href="#">Gmail</a></li>
+			<li><a href="#">Images</a></li>
+			<li><img src="http://triniscene.com/images/1435217041_menu.png" alt="icone menu"></li>
+			<li><a href="#">J</a></li>
+		</ul>
+	</div>
+
+
+	<div class="main-container">
+		<img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="logo google">
+
+		<form class="search-container">
+			<input type="text" class="search-bar" placeholder="What are you looking for?">
+			<div class="button-container">
+				<input class="search-button" type="submit" value="Google Search">
+
+				<input class="search-button" type="submit" value="I'm feeling lucky">
+			</div>
+		</form>
+	</div>
+
+
+	<div class="footer">
+			<ul>
+				<li><a href="#">Advertising</a></li>
+				<li><a href="#">Business</a></li>
+				<li><a href="#">About</a></li>					<ul class="footer-right">
+					<li><a href="#">Privacy</a></li>
+					<li><a href="#">Terms</a></li>
+					<li><a href="#">Settings</a></li>
+					<li><a href="#">Use Google.com.hk</a></li>
+				</ul>
+			</ul>
+		</div>
 
 </body>
 </html>
